--- a/nginx/Dockerfile-njs
+++ b/nginx/Dockerfile-njs
@@ -1,4 +1,4 @@
-FROM fj0rd/io:os
+FROM debian:bullseye-slim
 
 ARG nginx_repo=nginx/nginx
 ARG nchan_repo=slact/nchan
@@ -28,11 +28,13 @@ RUN set -eux \
   ; DEBIAN_FRONTEND=noninteractive \
     apt-get install -y --no-install-recommends \
     iproute2 procps curl jq xz-utils \
-    sudo git openssh-server \
+    sudo tzdata git openssh-server \
     lsb-release gnupg \
     $DEV_DEPS \
     $BUILD_DEPS \
   \
+  ; ln -sf /usr/share/zoneinfo/$TIMEZONE /etc/localtime \
+  ; echo "$TIMEZONE" > /etc/timezone \
   ; sed -i 's/^.*\(%sudo.*\)ALL$/\1NOPASSWD:ALL/g' /etc/sudoers \
   \
   ; mkdir -p /var/run/sshd \
