--- a/nginx/Dockerfile-or
+++ b/nginx/Dockerfile-or
@@ -1,18 +1,14 @@
-FROM fj0rd/io:os
+FROM fj0rd/io:foundation
 
 ARG openresty_repo=openresty/openresty
 ARG nchan_repo=slact/nchan
+ARG inlets_repo=inlets/inlets
+ARG frp_repo=fatedier/frp
 ARG s6overlay_repo=just-containers/s6-overlay
-ARG websocat_repo=vi/websocat
-ARG watchexec_repo=watchexec/watchexec
-ARG nvim_repo=neovim/neovim
-ARG nvim_config=fj0r/nvim-lua
-ARG rg_repo=BurntSushi/ripgrep
 
 ARG github_header="Accept: application/vnd.github.v3+json"
 ARG github_api=https://api.github.com/repos
 
-ENV LANG=C.UTF-8 LC_ALL=C.UTF-8 TIMEZONE=Asia/Shanghai
 ENV DEV_DEPS \
         luarocks apache2-utils \
         libpcre3-dev libssl-dev \
@@ -27,63 +23,21 @@ RUN set -eux \
   ; apt-get upgrade -y \
   ; DEBIAN_FRONTEND=noninteractive \
     apt-get install -y --no-install-recommends \
-    sudo \
-    iproute2 procps curl jq xz-utils \
-    git openssh-server \
     $DEV_DEPS \
     $BUILD_DEPS \
   \
-  ; sed -i 's/^.*\(%sudo.*\)ALL$/\1NOPASSWD:ALL/g' /etc/sudoers \
+  #; frp_ver=$(curl -sSL -H "'$github_header'" $github_api/${frp_repo}/releases | jq -r '.[0].tag_name' | cut -c 2-) \
+  #; frp_url=https://github.com/${frp_repo}/releases/download/v0.36.2/frp_0.36.2_linux_amd64.tar.gz \
+  #; curl -sSL ${frp_url} | tar zxf - --strip-components=1 -C /usr/local/bin frp_${frp_ver}_linux_amd64/frps -C /etc frp_${frp_ver}_linux_amd64/frps.ini \
+  #; echo 'token = secret' >> /etc/frps.ini \
   \
-  ; mkdir -p /var/run/sshd \
-  ; sed -i /etc/ssh/sshd_config \
-        -e 's!.*\(AuthorizedKeysFile\).*!\1 /etc/authorized_keys/%u!' \
-        -e 's!.*\(GatewayPorts\).*!\1 yes!' \
-        -e 's!.*\(PasswordAuthentication\).*yes!\1 no!' \
-  ; echo "Match Address 10.0.0.0/8,172.17.0.0/16,192.168.0.0/16\n    PasswordAuthentication yes" \
-        >> /etc/ssh/sshd_config \
-  \
-  ; rg_ver=$(curl -sSL -H "'$github_header'" $github_api/${rg_repo}/releases | jq -r '.[0].tag_name') \
-  ; rg_url=https://github.com/${rg_repo}/releases/download/${rg_ver}/ripgrep-${rg_ver}-x86_64-unknown-linux-musl.tar.gz \
-  ; curl -sSL ${rg_url} | tar zxf - -C /usr/local/bin --strip-components=1 ripgrep-${rg_ver}-x86_64-unknown-linux-musl/rg \
-  \
-  ; nvim_ver=$(curl -sSL -H "'$github_header'" $github_api/${nvim_repo}/releases | jq -r '[.[]|select(.prerelease==false)][0].tag_name') \
-  ; nvim_url=https://github.com/${nvim_repo}/releases/download/${nvim_ver}/nvim-linux64.tar.gz \
-  ; curl -sSL ${nvim_url} | tar zxf - -C /usr/local --strip-components=1 \
-  ; cfg_home=/etc/skel \
-  ; mkdir -p /opt/language-server \
-  ; mkdir -p /opt/vim \
-  ; mkdir $cfg_home/.config \
-  ; ln -sf $cfg_home/.config /root \
-  ; nvim_home=$cfg_home/.config/nvim \
-  ; nvim_config_ver=$(curl -sSL -H "'$github_header'" $github_api/${nvim_config}/releases | jq -r '[.[]|select(.prerelease==false)][0].tag_name') \
-  ; nvim_config_url=https://github.com/${nvim_config}/releases/download/${nvim_config_ver}/nvim-cfg.tar.gz \
-  ; curl -sSL ${nvim_config_url} | tar zxf - -C $cfg_home/.config \
-  #; git clone --recursive --depth=1 https://github.com/fj0r/nvim-lua.git $nvim_home \
-  #; nvim --headless +'autocmd User PackerComplete ++once sleep 300 | quitall' +'lua require("packer").sync()' \
-  ; rm -rf $nvim_home/pack/packer/start/*/.git \
-  ; mv $nvim_home/pack /opt/vim \
-  ; ln -sf /opt/vim/pack $nvim_home \
-  \
-  ; coc_lua_bin_repo=josa42/coc-lua-binaries \
-  ; lua_ls_ver=$(curl -sSL -H "'$github_header'" $github_api/${coc_lua_bin_repo}/releases | jq -r '.[0].tag_name') \
-  ; lua_ls_url=https://github.com/${coc_lua_bin_repo}/releases/download/${lua_ls_ver}/lua-language-server-linux.tar.gz \
-  ; mkdir -p /opt/language-server/sumneko_lua \
-  ; curl -sSL ${lua_ls_url} | tar zxf - \
-      -C /opt/language-server/sumneko_lua \
-      --strip-components=1 \
+  ; inlets_ver=$(curl -sSL -H "'$github_header'" $github_api/${inlets_repo}/releases | jq -r '.[0].tag_name') \
+  ; inlets_url=https://github.com/inlets/inlets/releases/download/${inlets_ver}/inlets \
+  ; curl -sSLo /usr/local/bin/inlets ${inlets_url} ; chmod +x /usr/local/bin/inlets \
   \
   ; s6overlay_ver=$(curl -sSL -H "'$github_header'" $github_api/${s6overlay_repo}/releases | jq -r '.[0].tag_name') \
   ; s6overlay_url=https://github.com/${s6overlay_repo}/releases/download/${s6overlay_ver}/s6-overlay-amd64.tar.gz \
   ; curl --fail --silent -L ${s6overlay_url} | tar xzvf - -C / \
-  \
-  ; watchexec_ver=$(curl -sSL -H "'$github_header'" $github_api/${watchexec_repo}/releases | jq -r '.[0].tag_name' | cut -c 6-) \
-  ; watchexec_url=https://github.com/${watchexec_repo}/releases/download/cli-v${watchexec_ver}/watchexec-${watchexec_ver}-x86_64-unknown-linux-musl.tar.xz \
-  ; curl -sSL ${watchexec_url} | tar Jxf - --strip-components=1 -C /usr/local/bin watchexec-${watchexec_ver}-x86_64-unknown-linux-musl/watchexec \
-  \
-  ; websocat_ver=$(curl -sSL -H "'$github_header'" $github_api/${websocat_repo}/releases | jq -r '.[0].tag_name') \
-  ; websocat_url=https://github.com/${websocat_repo}/releases/download/${websocat_ver}/websocat_amd64-linux-static \
-  ; curl -sSLo /usr/local/bin/websocat ${websocat_url} ; chmod +x /usr/local/bin/websocat \
   \
   ; OPENRESTY_VER=$(curl -sSL -H "'$github_header'" $github_api/${openresty_repo}/tags | jq -r '.[0].name' | cut -c 2-) \
   ; curl -sSL https://openresty.org/download/openresty-${OPENRESTY_VER}.tar.gz | tar -zxf - \
@@ -113,9 +67,8 @@ RUN set -eux \
   #; opm install duhoobo/lua-resty-smtp \
   ; ln -fs /opt/openresty/nginx/conf /etc/openresty \
   ; mkdir -p /etc/openresty/conf.d \
-  ; echo 'shopt -s cdable_vars' >> /root/.bashrc \
-  ; echo 'export or=/etc/openresty' >> /root/.bashrc \
-  ; echo 'export logs=/opt/openresty/nginx/logs' >> /root/.bashrc \
+  ; echo 'hash -d o="/etc/openresty"' >> /etc/skel/.ext.zsh \
+  ; echo 'hash -d l="/opt/openresty/nginx/logs"' >> /etc/skel/.ext.zsh \
   \
   ; luarocks install lua-resty-auto-ssl \
   ; mkdir /etc/resty-auto-ssl \
@@ -125,6 +78,10 @@ RUN set -eux \
         -keyout /etc/ssl/resty-auto-ssl-fallback.key \
         -out /etc/ssl/resty-auto-ssl-fallback.crt \
   \
+  ; ln -sf /etc/skel/.config /root \
+  ; ln -sf /etc/skel/.zshrc /root \
+  ; ln -sf /etc/skel/.zshrc.d /root \
+  \
   ; apt-get -y remove ${BUILD_DEPS} \
   ; apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
@@ -132,8 +89,6 @@ COPY services.o /etc/services.d
 COPY config.o /etc/openresty
 COPY reload-openresty /usr/local/bin
 WORKDIR /srv
-
-RUN rm -rf /etc/services.d/inlets
 
 VOLUME [ "/srv" ]
 EXPOSE 80 443
