--- a/php/Dockerfile-7x
+++ b/php/Dockerfile-7x
@@ -1,4 +1,4 @@
-FROM fj0rd/or
+FROM fj0rd/ng
 
 ARG php_version=7.4
 ENV PHP_VERSION=${php_version}
@@ -22,7 +22,9 @@ ENV PHP_PKGS \
 
 RUN set -eux \
   ; apt-get update \
-  ; apt-get install -y --no-install-recommends $PHP_PKGS cron \
+  ; curl -sL https://deb.nodesource.com/setup_16.x | bash - \
+  ; apt-get install -y --no-install-recommends nodejs cron \
+  ; apt-get install -y --no-install-recommends $PHP_PKGS \
   ; apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
 RUN set -eux \
@@ -51,7 +53,10 @@ COPY services.d/php-fpm /etc/services.d/php-fpm
 
 RUN set -ex \
   ; curl -sSL https://getcomposer.org/installer \
-    | php -- --install-dir=/usr/local/bin --filename=composer
+    | php -- --install-dir=/usr/local/bin --filename=composer \
+  ; npm install -g intelephense \
+  ; cd /opt; git clone --depth=1 https://github.com/xdebug/vscode-php-debug.git; cd vscode-php-debug; npm install; npm run build \
+  ; npm cache clean -f
 
 ENV PHP_DEBUG=
 ENV PHP_PROFILE=
