--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -1,4 +1,4 @@
-name: build web
+name: build java
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -44,59 +44,30 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Build apisix
+      - name: Build java11
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: apisix
-          file: apisix/Dockerfile
+          context: java
+          file: java/Dockerfile-jdk-11
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:apisix
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:java11
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build
+      - name: Build es
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: nginx
-          file: nginx/Dockerfile
+          context: java
+          file: java/Dockerfile-es
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:es
           labels: ${{ steps.meta.outputs.labels }}
 
-      #- name: Build or
-      #  uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-      #  with:
-      #    context: nginx
-      #    file: nginx/Dockerfile-openresty
-      #    push: ${{ github.event_name != 'pull_request' }}
-      #    tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:or
-      #    labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Build php7
+      - name: Build polynote
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: php
-          file: php/Dockerfile-7
+          context: java
+          file: java/Dockerfile-polynote
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php7
-          labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Build php7x
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: php
-          file: php/Dockerfile-7x
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php7x
-          labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Build php8x
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: php
-          file: php/Dockerfile-8x
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php8x
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:polynote
           labels: ${{ steps.meta.outputs.labels }}
 
