--- a/java/Dockerfile-scala
+++ b/java/Dockerfile-scala
@@ -4,7 +4,7 @@ ENV SCALA_HOME=/opt/scala
 ENV PATH=${SCALA_HOME}/bin:$PATH
 
 RUN set -eux \
-  ; curl -fLo /usr/local/bin/cs https://git.io/coursier-cli-"$(uname | tr LD ld)" \
+  ; xh -Fo /usr/local/bin/cs https://git.io/coursier-cli-"$(uname | tr LD ld)" \
   ; chmod +x /usr/local/bin/cs \
   ; cs install scala3-compiler scala3-repl
 
@@ -14,7 +14,7 @@ ARG metals_repo=scalameta/metals
 ARG mill_repo=lihaoyi/mill
 
 RUN set -eux \
-  ; metals_version=$(curl -sSL -H "'$github_header'" $github_api/${metals_repo}/releases | jq -r '.[0].tag_name'|cut -c 2-) \
+  ; metals_version=$(xh $github_api/${metals_repo}/releases $github_header | jq -r '.[0].tag_name'|cut -c 2-) \
   ; cs bootstrap \
   --java-opt -Xss4m \
   --java-opt -Xms100m \
@@ -24,7 +24,7 @@ RUN set -eux \
   -o /usr/local/bin/metals -f
 
 RUN set -eux \
-  ; mill_version=$(curl -sSL -H "'$github_header'" $github_api/${mill_repo}/releases | jq -r '.[0].tag_name') \
-  ; curl -L https://github.com/lihaoyi/mill/releases/download/${mill_version}/${mill_version} > /usr/local/bin/mill \
+  ; mill_version=$(xh $github_api/${mill_repo}/releases $github_header  | jq -r '.[0].tag_name') \
+  ; xh -F https://github.com/lihaoyi/mill/releases/download/${mill_version}/${mill_version} > /usr/local/bin/mill \
   ; chmod +x /usr/local/bin/mill
 
