--- a/java/Dockerfile-flink
+++ b/java/Dockerfile-flink
@@ -9,8 +9,8 @@ RUN set -ex; \
 # Grab gosu for easy step-down from root
 ENV GOSU_VERSION 1.11
 RUN set -ex; \
-  curl -sSLo /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$(dpkg --print-architecture)"; \
-  curl -sSLo /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$(dpkg --print-architecture).asc"; \
+  xh -Fo /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$(dpkg --print-architecture)"; \
+  xh -Fo /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$(dpkg --print-architecture).asc"; \
   export GNUPGHOME="$(mktemp -d)"; \
   for server in ha.pool.sks-keyservers.net $(shuf -e \
                           hkp://p80.pool.sks-keyservers.net:80 \
@@ -36,7 +36,7 @@ WORKDIR $FLINK_HOME
 
 # Install Flink
 RUN set -ex; \
-  curl -sSLo flink.tgz "$FLINK_TGZ_URL"; \
+  xh -Fo flink.tgz "$FLINK_TGZ_URL"; \
   tar -xf flink.tgz --strip-components=1; \
   rm flink.tgz; \
   chown -R flink:flink .
