--- a/java/Dockerfile-polynote
+++ b/java/Dockerfile-polynote
@@ -20,7 +20,7 @@ ARG polynote_repo=polynote/polynote
 
 WORKDIR /opt
 RUN set -eux \
-  ; spark_version=$(curl -sSL -H "'$github_header'" $github_api/${spark_repo}/releases | jq -r '.[0].tag_name'|cut -c 2-) \
+  ; spark_version=$(xh $github_api/${spark_repo}/releases $github_header | jq -r '.[0].tag_name'|cut -c 2-) \
   ; spark_version=3.1.2 \
   ; pip3 install \
       jep \
@@ -29,10 +29,10 @@ RUN set -eux \
       virtualenv \
       numpy \
       pandas \
-  ; curl -L http://apache.claz.org/spark/spark-${spark_version}/spark-${spark_version}-bin-hadoop3.2.tgz | tar -xzvpf - \
+  ; xh -F http://apache.claz.org/spark/spark-${spark_version}/spark-${spark_version}-bin-hadoop3.2.tgz | tar -xzvpf - \
   ; mv spark* /opt/spark \
-  ; polynote_version=$(curl -sSL -H "'$github_header'" $github_api/${polynote_repo}/releases | jq -r '.[0].tag_name') \
-  ; curl -L https://github.com/polynote/polynote/releases/download/${polynote_version}/polynote-dist.tar.gz | tar -xzvpf -
+  ; polynote_version=$(xh $github_api/${polynote_repo}/releases $github_header | jq -r '.[0].tag_name') \
+  ; xh -F https://github.com/polynote/polynote/releases/download/${polynote_version}/polynote-dist.tar.gz | tar -xzvpf -
 
 ENV PYSPARK_ALLOW_INSECURE_GATEWAY 1
 ENV SPARK_HOME /opt/spark
