--- a/java/Dockerfile-pulsar-jdk8
+++ b/java/Dockerfile-pulsar-jdk8
@@ -7,13 +7,13 @@ ARG github_api=https://api.github.com/repos
 ARG pulsar_repo=apache/pulsar
 ARG pulsarctl_repo=streamnative/pulsarctl
 RUN set -eux \
-  ; pulsar_version=$(curl -sSL -H "'$github_header'" $github_api/${pulsar_repo}/releases | jq -r '.[0].tag_name'|cut -c 2-) \
+  ; pulsar_version=$(xh $github_api/${pulsar_repo}/releases $github_header | jq -r '.[0].tag_name'|cut -c 2-) \
   ; pulsar_url="https://www.apache.org/dyn/mirrors/mirrors.cgi?action=download&filename=pulsar/pulsar-${pulsar_version}/apache-pulsar-${pulsar_version}-bin.tar.gz" \
-  ; curl -sSL ${pulsar_url} | tar zxf - -C /pulsar --strip-components=1 \
+  ; xh -F ${pulsar_url} | tar zxf - -C /pulsar --strip-components=1 \
   \
-  ; pulsarctl_version=$(curl -sSL -H "'$github_header'" $github_api/${pulsarctl_repo}/releases | jq -r '.[0].tag_name') \
+  ; pulsarctl_version=$(xh $github_api/${pulsarctl_repo}/releases $github_header | jq -r '.[0].tag_name') \
   ; pulsarctl_url=https://github.com/${pulsarctl_repo}/releases/download/${pulsarctl_version}/pulsarctl-amd64-linux.tar.gz \
-  ; curl -sSL ${pulsarctl_url} | tar zxf - -C /usr/local/bin --strip-components=1 \
+  ; xh -F ${pulsarctl_url} | tar zxf - -C /usr/local/bin --strip-components=1 \
   \
   ; pip3 --default-timeout=100 --no-cache-dir install pulsar-client==${pulsar_version} \
   ; pip3 config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
