--- a/java/Dockerfile-scala2
+++ b/java/Dockerfile-scala2
@@ -4,12 +4,16 @@ ENV SCALA_HOME=/opt/scala
 ENV PATH=${SCALA_HOME}/bin:$PATH
 
 RUN set -eux \
+  ; pup_ver=$(xh https://api.github.com/repos/ericchiang/pup/releases Accept:application/vnd.github.v3+json | jq -r '.[0].tag_name') \
+  ; pup_url=https://github.com/ericchiang/pup/releases/download/${pup_ver}/pup_${pup_ver}_linux_amd64.zip \
+  ; xh -Fo pup.zip ${pup_url} && unzip pup.zip && rm -f pup.zip && chmod +x pup && mv pup /opt/assets/ \
+  \
   ; mkdir -p /usr/share/man/man1 \
   ; mkdir -p ${SCALA_HOME} \
   ; xh -F $(xh -F https://scala-lang.org/download/|pup '[id="#link-main-unixsys"] attr{href}') \
       | tar xzf - -C ${SCALA_HOME} --strip-components=1
 
-ARG github_header="Accept: application/vnd.github.v3+json"
+ARG github_header="Accept:application/vnd.github.v3+json"
 ARG github_api=https://api.github.com/repos
 ARG mill_repo=lihaoyi/mill
 
