--- a/ngx/config/nginx.conf
+++ b/ngx/config/nginx.conf
@@ -4,83 +4,102 @@ daemon off;
 #worker_processes  auto;
 worker_processes  1;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
-
-
 events {
     worker_connections  1024;
 }
 
-env HOSTNAME;
-env TIMEZONE;
-
 http {
     include       mime.types;
-    default_type  application/octet-stream;
-
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
-    #access_log  logs/access.log  main;
-
     sendfile        on;
-    #tcp_nopush     on;
 
     keepalive_timeout  0;
 
     gzip  on;
 
-    js_path "/etc/nginx/njs/";
-    js_import utils.js;
+    js_import env.js;
     js_var $1 $1;
     js_var $2 $2;
     js_var $3 $3;
 
-    include conf.d/*.conf;
+    ###### var {{{
+    js_set $upstream_api      env.u_api;
+    js_set $upstream_api_host env.u_api_host;
+    js_set $upstream_xmh      env.u_xmh;
+    js_set $upstream_xmh_host env.u_xmh_host;
+    js_set $upstream_test     env.u_test;
+    ###### var }}}
 
+    server {
+        listen                80;
+        root                  '/srv';
+        charset               utf-8;
+       #default_type          application/octet-stream;
+        default_type          application/json;
 
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
+        proxy_http_version    1.1;
+        proxy_set_header      Host              $host;
+        proxy_set_header      X-Real-IP         $remote_addr;
+        proxy_set_header      X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header      X-Forwarded-Proto $scheme;
+        proxy_set_header      X-Original-URI    $request_uri;
+        proxy_set_header      Connection        "upgrade";
+        proxy_set_header      Upgrade           $http_upgrade;
+        proxy_connect_timeout 1800s;
+        proxy_read_timeout    1800s;
+        proxy_send_timeout    1800s;
+        client_max_body_size  80M;
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+        resolver $ngx_resolver;
+        #access_log  /var/log/nginx/host.access.log  main;
 
+        location ~* /bin/(.*) {
+            js_content env.bin;
+        }
 
-    # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
+        location / {
+            autoindex on;
+            autoindex_format json;
+        }
 
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
+        location ~* /([0-9]+)/(.*) {
+            proxy_pass http://127.0.0.1:$1/$2;
+        }
 
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
+        location = /favicon.ico {
+            log_not_found off;
+            access_log off;
+        }
 
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
+        location = /robots.txt {
+            allow all;
+            log_not_found off;
+            access_log off;
+        }
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+        error_page      500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
+
+        ###### route {{{
+        location /bidding {
+            proxy_set_header Host $upstream_api_host;
+            proxy_pass $upstream_api;
+        }
+
+        location /xmh {
+            proxy_set_header Host $upstream_xmh_host;
+            proxy_pass $upstream_xmh;
+        }
+
+        location /test/ {
+            rewrite ^/test/(.*)$ /$1 break;
+            proxy_set_header Host $upstream_test;
+            proxy_pass $upstream_test;
+        }
+        ###### route }}}
+
+    }
 
 }
 
-stream {
-    include stream.d/*.conf;
-}
