--- a/ngx/config/nginx.conf
+++ b/ngx/config/nginx.conf
@@ -22,11 +22,8 @@ http {
     js_var $3 $3;
 
     ###### var {{{
-    js_set $upstream_api      env.u_api;
-    js_set $upstream_api_host env.u_api_host;
-    js_set $upstream_xmh      env.u_xmh;
-    js_set $upstream_xmh_host env.u_xmh_host;
-    js_set $upstream_test     env.u_test;
+    js_set $test_url     env.u_test;
+    js_set $test_host    env.h_test;
     ###### var }}}
 
     server {
@@ -82,20 +79,10 @@ http {
         }
 
         ###### route {{{
-        location /bidding {
-            proxy_set_header Host $upstream_api_host;
-            proxy_pass $upstream_api;
-        }
-
-        location /xmh {
-            proxy_set_header Host $upstream_xmh_host;
-            proxy_pass $upstream_xmh;
-        }
-
         location /test/ {
             rewrite ^/test/(.*)$ /$1 break;
-            proxy_set_header Host $upstream_test;
-            proxy_pass $upstream_test;
+            proxy_set_header Host $test_host;
+            proxy_pass $test_url;
         }
         ###### route }}}
 
